syntax = "proto3";

package ibc.applications.icq.host.v1;

option go_package = "github.com/cosmos/ibc-go/v3/modules/apps/icq/host/types";

import "gogoproto/gogo.proto";

// Params defines the set of on-chain interchain query parameters.
// The following parameters may be used to disable the host submodule.
message Params {
  // host_enabled enables or disables the host submodule.
  bool host_enabled = 1 [(gogoproto.moretags) = "yaml:\"host_enabled\""];
  // allow_queries defines a list of query paths allowed to be queried on a host chain.
  repeated string allow_queries = 2 [(gogoproto.moretags) = "yaml:\"allow_queries\""];
}
